fixed header alignment

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -139,11 +139,15 @@ $menu_width: 10em;
         height: 100%;
         padding: 1em;
         @include custom_transition(height 0.5s ease);
-
+        overflow: auto;
         &.hide {
             height: 0;
             padding: 0;
             overflow: hidden;
+        }
+        .site-title {
+            display: inline-block;
+            margin-top: 6px;
         }
 
         .menu-toggle {
